--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="exit_app">Вийти</string>
     <string name="load">Завантажити</string>
     <string name="load_title">Завантажено</string>
+    <string name="file_name">File name</string>
+    <string name="date">Date</string>
+    <string name="select_btn">SELECT</string>
+    <string name="file_manager_title">FILE MANAGER</string>
 </resources>
