--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="date">Date</string>
     <string name="select_btn">SELECT</string>
     <string name="file_manager_title">FILE MANAGER</string>
+    <string name="q_dock">Кiлькiсть накладних</string>
+    <string name="q_places">Кiлькiсть мiсць</string>
+    <string name="on_scan">Проскановано</string>
+    <string name="q_ost">Залишок</string>
+    <string name="scaning">с к а н у в а т и</string>
+    <string name="scan_complete">Завершити сканування</string>
 </resources>
