--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,18 @@
     <string name="q_ost">Залишок</string>
     <string name="scaning">с к а н у в а т и</string>
     <string name="scan_complete">Завершити сканування</string>
+
+    <string name="plus_one">Задати кількість</string>
+    <string name="set_location">Задати мiсце</string>
+    <string name="scan"> S C A N </string>
+    <string name="fact_quantity">К-ть фактично</string>
+    <string name="dock_quantity">К-ть по накладнiй</string>
+    <string name="razniza">Рiзниця</string>
+    <string name="add_quantity">Добавити</string>
+    <string name="cancel">Вiдмiнити</string>
+    <string name="dial_title">Вкажiть нову локацiю</string>
+    <string name="dial_save">Зберегти</string>
+    <string name="dial_cancel">Вiдмiнити</string>
+    <string name="dial_format">1AA-00-00</string>
+    <string name="load_to_file">Вигрузити в файл</string>
 </resources>
