--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="dial_cancel">Вiдмiнити</string>
     <string name="dial_format">1AA-00-00</string>
     <string name="load_to_file">Вигрузити в файл</string>
+    <string name="dialog_title">Вкажiть кiлькiсть</string>
 </resources>
