--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="on_scan">Проскановано</string>
     <string name="q_ost">Залишок</string>
     <string name="scaning">с к а н у в а т и</string>
-    <string name="scan_complete">Завершити сканування</string>
+    <string name="scan_complete">Завершити</string>
 
     <string name="plus_one">Задати кількість</string>
     <string name="set_location">Задати мiсце</string>
